more progress on mDNS discovery. So far several problems to be fixed in UI, including handling of TXT records and prefilling response by data from the sender and so on.